--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "antd": "^5.19.2",
     "dayjs": "^1.11.11",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
